# sti-bus-delays

./: .gitignore  README.md  docker-compose.yml  package.json
application/actual-data-downloader/: pyproject.toml
application/actual-data-downloader/actual_data_downloader/: index.py
application/actual-data-downloader/tests/integration/: test_index.py
application/actual-data-downloader/tests/unit/: test_index.py
application/daily-chart-generator/: pyproject.toml
application/daily-chart-generator/daily_chart_generator/: index.py
application/daily-chart-generator/tests/integration/: test_index.py
application/daily-chart-generator/tests/unit/: test_index.py
application/monthly-chart-generator/: pyproject.toml
application/monthly-chart-generator/monthly_chart_generator/: index.py
application/monthly-chart-generator/tests/integration/: test-data.csv  test_index.py
application/monthly-chart-generator/tests/unit/: test_index.py
application/src/actual-data-downloader/: index.py  requirements.txt
application/src/daily-chart-generator/: index.py  requirements.txt
application/src/monthly-chart-generator/: index.py
doc/img/: overview.puml
doc/results/: results.md  sync_results_and_generate_markdown.sh
doc/results/actual-data/2024/07/: 2024-07-01_sti-thun-bahnhof.csv  2024-07-02_sti-thun-bahnhof.csv  2024-07-03_sti-thun-bahnhof.csv  2024-07-04_sti-thun-bahnhof.csv  2024-07-05_sti-thun-bahnhof.csv  2024-07-06_sti-thun-bahnhof.csv  2024-07-07_sti-thun-bahnhof.csv  2024-07-08_sti-thun-bahnhof.csv  2024-07-09_sti-thun-bahnhof.csv  2024-07-10_sti-thun-bahnhof.csv  2024-07-11_sti-thun-bahnhof.csv  2024-07-12_sti-thun-bahnhof.csv  2024-07-13_sti-thun-bahnhof.csv  2024-07-14_sti-thun-bahnhof.csv  2024-07-15_sti-thun-bahnhof.csv  2024-07-16_sti-thun-bahnhof.csv  2024-07-17_sti-thun-bahnhof.csv  2024-07-18_sti-thun-bahnhof.csv  2024-07-19_sti-thun-bahnhof.csv  2024-07-20_sti-thun-bahnhof.csv  2024-07-21_sti-thun-bahnhof.csv  2024-07-22_sti-thun-bahnhof.csv  2024-07-23_sti-thun-bahnhof.csv  2024-07-24_sti-thun-bahnhof.csv  2024-07-25_sti-thun-bahnhof.csv  2024-07-26_sti-thun-bahnhof.csv  2024-07-27_sti-thun-bahnhof.csv  2024-07-28_sti-thun-bahnhof.csv  2024-07-29_sti-thun-bahnhof.csv  2024-07-30_sti-thun-bahnhof.csv  2024-07-31_sti-thun-bahnhof.csv
doc/results/actual-data/2024/08/: 2024-08-01_sti-thun-bahnhof.csv  2024-08-02_sti-thun-bahnhof.csv  2024-08-03_sti-thun-bahnhof.csv  2024-08-04_sti-thun-bahnhof.csv  2024-08-05_sti-thun-bahnhof.csv  2024-08-06_sti-thun-bahnhof.csv  2024-08-07_sti-thun-bahnhof.csv  2024-08-08_sti-thun-bahnhof.csv  2024-08-09_sti-thun-bahnhof.csv  2024-08-10_sti-thun-bahnhof.csv  2024-08-11_sti-thun-bahnhof.csv  2024-08-12_sti-thun-bahnhof.csv  2024-08-13_sti-thun-bahnhof.csv  2024-08-14_sti-thun-bahnhof.csv  2024-08-15_sti-thun-bahnhof.csv  2024-08-16_sti-thun-bahnhof.csv  2024-08-17_sti-thun-bahnhof.csv  2024-08-18_sti-thun-bahnhof.csv  2024-08-19_sti-thun-bahnhof.csv  2024-08-20_sti-thun-bahnhof.csv  2024-08-21_sti-thun-bahnhof.csv  2024-08-22_sti-thun-bahnhof.csv  2024-08-23_sti-thun-bahnhof.csv  2024-08-24_sti-thun-bahnhof.csv  2024-08-26_sti-thun-bahnhof.csv  2024-08-27_sti-thun-bahnhof.csv  (+4 more)
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: sti-bus-delays-stack.ts
infrastructure/test/: sti-bus-delays.test.ts
lib/: sti-bus-delays-stack.ts
