[tool.poetry]
name = "monthly-chart-generator"
version = "0.1.0"
description = "Generate a monthly chart"
authors = ["Lukas Akermann"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
universal-pathlib = "^0.2.3"
typing-extensions = "^4.12.2"
s3fs = "^2024.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-env = "^1.1.3"

[tool.pytest_env]
OUTPUT_PATH = 's3://sti-bus-delays/monthly-charts'
OUTPUT_FILE_NAME = 'sti-thun-bahnhof'
FSSPEC_S3_ENDPOINT_URL = 'http://localhost:9000'
FSSPEC_S3_KEY = 'minio'
FSSPEC_S3_SECRET = 'minio123'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
